adds scott email, linkedin link

--- a/index.html
+++ b/index.html
@@ -290,13 +290,15 @@
 									<div class="image ">
 										<img src="images/bios/zohaib_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
+
 									<ul class="icons">
-								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
+										<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+									</ul>
+
 									<p class="align-left">Born in California, raised in Pakistan, and having worked in Toronto, Canada, <span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Zohaib</a></span> has a lot of experience navigating unfamiliar territory.
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
                                     He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
@@ -309,13 +311,13 @@
 									<div class="image ">
 										<img src="images/bios/scott_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
+
+
 									<ul class="icons">
-								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
+										<li><a href="https://www.linkedin.com/in/sleinweber/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:sleinweb@andrew.cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+									</ul>
+
 									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
                                     <br><br><b>Post MHCI:</b><br>
@@ -347,16 +349,14 @@
 										<img src="images/bios/nika_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 
-
 									<ul class="icons">
+										<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+									</ul>
 
-									<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-
-							</ul>
 									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Nika</a></span> holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Designer</p>
