adds scott website link

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 								</section>
 								<section  class="align-center">
 									<span class="icon style1 major"></span>
-									<h3>Scott Leinweber</h3>
+									<h3><a href="http://scottleinweber.com">Scott Leinweber</a></h3>
 									<div class="image ">
 										<img src="images/bios/scott_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
@@ -318,7 +318,7 @@
 										<li><a href="mailto:sleinweb@andrew.cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
 
-									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
+									<p class="align-left"><span ><a href="http://scottleinweber.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
                                     <br><br><b>Post MHCI:</b><br>
                                     3D Interaction Designer, UX Designer</p>
