--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/w01_team_rubric.jpg" alt="Team Rubric" />
+							<img src="images/w01_team_rubric.JPG" alt="Team Rubric" />
 						</div>
 					</section>
 
