Adding week note - spoilers to home page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</div>
 						<div class="content">
 							<h2>Weeknotes 2 - Kickoff</h2>
-							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
+							<p>How do we plan a Kick-off meeting around such a general topic? Can we design some co-design questions to help get as much out of the client as possible and narrow us down on to a specific path?</p>
 							<ul class="actions vertical">
 								<li><a href="week02.html" class="button">Read More</a></li>
 							</ul>
@@ -64,7 +64,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 3 - Post-Kickoff - Go!</h2>
-							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
+							<p>After kickoff, we had to start drilling into our research plan and what methods may cater best to each research question or hypothesis. This provided to be too difficult with such a wide ranging topic, so we broke down ...</p>
 							<ul class="actions vertical">
 								<li><a href="week02.html" class="button">Read More</a></li>
 							</ul>
