--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- One -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Weeknotes 1</h2>
+							<h2>Weeknotes 1 - Hello!</h2>
 							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
 							<ul class="actions vertical">
 								<li><a href="week01.html" class="button">Read More</a></li>
