adding to aroons bio

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
 									<ul class="icons">
 									<li><a href="https://instagram.com/aroonmathai" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:aroonmathai@cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">EMail</span></a></li>
 							</ul>
                                     <p class="align-left"><span ><a href="http://aroonmathai.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Aroon</a></span> has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
                                     <br><br><b>Post MHCI:</b><br>
