Adding aroons medium to bio

--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
 									</div>
 
 									<ul class="icons">
+									<li><a href="https://medium.com/@aroonmathai" class="icon style1 fa-medium"><span class="label">Medium</span></a></li>
 									<li><a href="https://instagram.com/aroonmathai" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:aroonmathai@cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">EMail</span></a></li>
