added my link - grace

--- a/index.html
+++ b/index.html
@@ -265,21 +265,21 @@
 							<div class="items style3 small onscroll-fade-in">
 								<section class="align-center">
 									<span class="icon style1 major"></span>
-									<h3>Grace Guo</h3>
+									<a href="http://www.gracesiqiguo.com"><h3>Grace Guo</h3></a>
 
 									<div class="image ">
 										<img src="images/bios/grace_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 
 									<ul class="icons">
-										<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+										<!-- <li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li> -->
+										<!-- <li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li> -->
+										<!-- <li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li> -->
+										<li><a href="https://www.linkedin.com/in/gracesiqiguo" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<!-- <li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li> -->
 									</ul>
 
-                                    <p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Grace</a></span> holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
+                                    <p class="align-left"><span ><a href="http://www.gracesiqiguo.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Grace</a></span> holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
                                     <br><br><b>Post MHCI:</b><br>
                                     UX Designer</p>
 								</section>
