Zohaib Link Updates

--- a/index.html
+++ b/index.html
@@ -288,20 +288,23 @@
 
 								<section  class="align-center">
 									<span class="icon style1 major"></span>
-									<h3>Zohaib Khan</h3>
+									<h3><a href="http://zohaibkhan.me">Zohaib Khan</a></h3>
 									<div class="image ">
 										<img src="images/bios/zohaib_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 
 									<ul class="icons">
-										<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+										<!-- <li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li> -->
+                    <li><a href="https://medium.com/@zohaibrkhan" class="icon style1 fa-medium"><span class="label">Medium</span></a></li>
+										<li><a href="https://www.linkedin.com/in/zohaibrkhan/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:zuk@andrew.cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
 
-									<p class="align-left">Born in California, raised in Pakistan, and having worked in Toronto, Canada, <span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Zohaib</a></span> has a lot of experience navigating unfamiliar territory.
+
+
+									<p class="align-left">Born in California, raised in Pakistan, and having worked in Toronto, Canada, <span ><a href="http://zohaibkhan.me" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Zohaib</a></span> has a lot of experience navigating unfamiliar territory.
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
                                     He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
                                     <br><br><b>Post MHCI:</b><br>
