nika-added-links

--- a/index.html
+++ b/index.html
@@ -357,11 +357,8 @@
 									</div>
 
 									<ul class="icons">
-										<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="https://www.linkedin.com/in/xuetingnikazhang/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:xuetingz@andrew.cmu.edu?Subject=Hello" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
 
 									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Nika</a></span> holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
