--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
 					</section>-->
 
 				<!-- Four -->
-					<!--<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Weeknotes 3</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Weeknotes 4 - Week one in the four week plan</h2>
+							<p>The scope of our prompt is enormous. With such an open prompt, we could envision ourselves exploring many avenues within a limited time. After much deliberation, we came up with a plan: mapping out our big questions ...</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Read More</a></li>
+								<li><a href="week04.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/w04_visioning.JPG" alt="" />
 						</div>
-					</section>-->
+					</section>
 
 				<!-- Five -->
 					<!--<section class="wrapper style1 align-center">
