fixes link w1, adds w5 page and imgs

--- a/week01.html
+++ b/week01.html
@@ -35,7 +35,7 @@
 
 								<p>Our method for doing this took form in a Google Spreadsheet. Everyone got a color and copy-and-pasted in the █ unicode character to mark the box. We did it all at once and in the same room. This produced a chart that helped us instantly visualize the range of our team. Most critically, it uncovered the absence of research skills as well as the interest to develop them. This was an immediate issue that needed discussion and we worked through it by discussing team roles.</p>
 
-								<span class="image fit"><img src="images/MC_team_roles_spreadsheet.png" alt="" /></span>
+								<span class="image fit"><img src="images/w01_team_rubric.JPG" alt="Team skills rubric" /></span>
 
 								<h4>Mentor/Mentee Roles</h4>
 
