adds more imgs to w5

--- a/week05.html
+++ b/week05.html
@@ -27,6 +27,7 @@
 
 								<p>This week we shift to the theme of identity, privacy and sharing. With the access to research resources at CMU we were able to reach out to researchers and professors from the CMU CyLab (CyLab Security and Privacy Institute). Specifically, we contacted experts in the areas of cybersecurity, blockchain, privacy, and usability.</p>
 
+								<span class="image fit"><img src="images/w05_burning_candle_small.jpg" alt="Burning the candle from both ends" /></span>
 
 								<b>Three big hypotheses that we are trying to answer are:</b>
 								<ul>
@@ -42,9 +43,10 @@
 								<li>Blockchain does have some amazing potential and is already being used for asset tracking, smart contracts, and other B2B applications.</li>
 								</ul>
 
-								<!-- <add more insights?>
+								<!-- <add more insights?> -->
+								<span class="image fit"><img src="images/w05_scrum_board_01.jpg" alt="Z and A at scrum board" /></span>
 
-								<insert selfie app prototypes here> -->
+								<!-- <insert selfie app prototypes here> -->
 
 								<p>
 								Testing prototypes: On the side of prototyping, we continued exploring the selfie authentication by creating paper prototypes and tested it with people on the street. We are hoping to learn the threshold of social acceptance and consumer perceptions towards new biometric technology. We did some quick guerrilla research to type our prototype. The major takeaway is that people don’t trust facial recognition technology but are willing to use it if the social context is appropriate.</p>
@@ -55,17 +57,15 @@
 
 								<b>Revisiting Plan:</b>
 								<p>Another step we took this week is making some changes to how we run the team to improve efficiency:</p>
-								<p>Physical Scrum board: The web Trello board hasn’t been working very well for our team. Instead, we made a physical Trello board and put it up on the office wall so that we can easily refer to it and update any time during the meetings.</p>
+								<b>Physical Scrum board:</b>
+								<p>The web Trello board hasn’t been working very well for our team. Instead, we made a physical Trello board and put it up on the office wall so that we can easily refer to it and update any time during the meetings.</p>
+
+								<span class="image fit"><img src="images/w05_scrum_board_02.jpg" alt="Z and A at scrum board" /></span>
+
 
 								<b>Sub-team meetings:</b>
 								<p> It is not always efficient to have everyone present for all the meetings. We went back to the our individual roles and responsibilities formed sub teams for research and project management. The sub-team will make plan and assign tasks for the rest of the team. This structure had been working well for us and allows the meeting times to be spent more efficiently.</p>
 
-
-
-								<span class="image fit"><img src="images/w03_researchenvironment_and_spectrums.jpg" alt="whiteboard shots from Grace’s environmental chart and the Quadrants" /></span>
-
-
-											<!--<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis volutpat lorem ipsum dolor sit amet dolor consequat.</p>-->
 							</div>
 
 
@@ -79,13 +79,6 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<!-- <ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul> -->
 							<p>&copy; Team Mastercard, CMU.</p>
 						</div>
 					</footer>
