adds w5 to index

--- a/index.html
+++ b/index.html
@@ -74,18 +74,6 @@
 						</div>
 					</section>
 
-					<!--<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Weeknotes 2</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Read More</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
-						</div>
-					</section>-->
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
@@ -101,7 +89,22 @@
 						</div>
 					</section>
 
+
 				<!-- Five -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 5 - Identity, Privacy, and Sharing</h2>
+							<p>This week we shift to the theme of identity, privacy and sharing...</p>
+							<ul class="actions vertical">
+								<li><a href="week05.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w05_burning_candle_small.jpg" alt="Burning the candle at both ends" />
+						</div>
+					</section>
+
+
 					<!--<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Another Future Weeknotes</h2>
