--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/w05_burning_candle_small.jpg" alt="Burning the candle at both ends" />
+							<img src="images/w05_burning_candle_small.JPG" alt="Burning the candle at both ends" />
 						</div>
 					</section>
 
