--- a/week08.html
+++ b/week08.html
@@ -21,7 +21,7 @@
 			<section class="wrapper style1 align-left">
 						<div class="inner medium">
 							<header>
-								<h2>Our trip to Austin for SXSW!</h2>
+								<h1>Our trip to Austin for SXSW!</h1>
 							</header>
 							<div class="content">
 
@@ -56,6 +56,55 @@ ZOHAIB
 <p>How terrible some of the big name companies did at the event. I attended a Facebook talk by members of the Facebook IQ team, and it was completely substance free. Not jargon free though. I got this gem: “Augmented Virtuality”, after which I promptly departed.</p>
 <p>I heard the Google house was a complete mess, with several Google Assistants not working like they should have been due to all the crosstalk, all while being ordered by overly enthusiastic actors doing their best to pretend how everything was fine, and that Google Assistants will transform your life.</p>
 
+	<section class="wrapper style1 align-center">
+		<div class="inner">
+			<p>Zohaib's photo gallery</p>
+		</div>
+			<div class="gallery style2 medium lightbox onscroll-fade-in">
+				<article>
+					<a href="images/gallery/fulls/01.jpg" class="image">
+						<img src="images/gallery/thumbs/01.jpg" alt="" />
+					</a>
+					<div class="caption">
+						<h3>Ipsum Dolor</h3>
+						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<ul class="actions">
+							<li><span class="button small">Details</span></li>
+						</ul>
+					</div>
+				</article>
+				<article>
+					<a href="images/gallery/fulls/02.jpg" class="image">
+						<img src="images/gallery/thumbs/02.jpg" alt="" />
+					</a>
+					<div class="caption">
+						<h3>Feugiat Lorem</h3>
+						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<ul class="actions">
+							<li><span class="button small">Details</span></li>
+						</ul>
+					</div>
+				</article>
+				<article>
+					<a href="images/gallery/fulls/03.jpg" class="image">
+						<img src="images/gallery/thumbs/03.jpg" alt="" />
+					</a>
+					<div class="caption">
+						<h3>Magna Amet</h3>
+						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<ul class="actions">
+							<li><span class="button small">Details</span></li>
+						</ul>
+					</div>
+				</article>
+			</div>
+	</section>
+
+
+
+
+
+
 <!--
 
 GRACE
@@ -78,6 +127,8 @@ Photo: Alyssa Abkowltz/The Wall Street</p>
 
 <h3>Surprise</h3><p>Elon Musk was there!</p>
 
+
+<span class="image fit"><img src="images/w04_users.jpg" alt="whiteboard shots for list of users we picked." /></span>
 <!--
 
 NIKA
@@ -103,6 +154,7 @@ However, the question is why this trend is apparent here in Austin. The huge cus
 <p>AI was one of the biggest themes at SXSW 2018. To my surprise, a good portion of the talks focus on the ethical issues of AI. Gender and race equality is a frequently discussed topic. One rule of thumb is to train AI with unbiased data. I’m glad to see how the people shaping the future of AI are putting a lot of thought and effort into the ethical side of the technology.</p>
 <p>It also leads me to think: can card-only payments be a form of discrimination for lower income populations? How can we include everyone while moving together into the age of a cashless society? There is also the big question of: is convenience always a good thing? What if payments are so convenient, people no longer take the time to think about budgeting and make people prone to debt?</p>
 
+<span class="image fit"><img src="images/w04_users.jpg" alt="whiteboard shots for list of users we picked." /></span>
 <!--
 
 SCOTT
@@ -141,6 +193,9 @@ SCOTT
 
 <h3>Favorite Thing</h3>
 <p>Beyond some of the terrific talks SXSW had to offer, I think Austin itself was my favorite part. The city is alive with music, as well as terrific food. I had plenty of tacos or bbq and splurged on food while I was there. The music scene is great and I was happy to see a number of performances, the best of which may go to Low performing with an organ in St. David’s Episcopal church. And finally, the weather! I rented a bike and had perfect weather for commuting to and from the downtown to South Lamar, and around the beautiful lake. I definitely recommend Austin as a great place for any winter weary travellers from the North to spend some time in early spring!</p>
+
+<span class="image fit"><img src="images/w04_users.jpg" alt="whiteboard shots for list of users we picked." /></span>
+
 
 							</div>
 						</div>
