adds new imgs for W8

--- a/week08.html
+++ b/week08.html
@@ -25,7 +25,7 @@
 							</header>
 							<div class="content">
 
-<span class="image fit"><img src="images/banner.jpg" alt="whiteboard shots for list of users we picked." /></span>
+<span class="image fit"><img src="images/w08_MCatSXSW.jpg" alt="The Mastercard display at the Four Seasons at SXSW." /></span>
 
 <p>Every year, for 10 days in the middle of March, over 400,000 people descend upon Austin, Texas to attend the thousands of varied events, talks, and festivals that combine to form South by Southwest (SXSW).</p>
 <!--
@@ -128,9 +128,9 @@ Photo: Alyssa Abkowltz/The Wall Street</p>
 <p>The Sony Wow Studio at SXSW showcased a number of new technologies being developed at Sony. It was an eye-opening experience. One major theme in the Studio was projector-based technology. Sony presented a few products that use projectors and sensors to create interactive experiences. One of the products focused on creating a canvas for drawing on any flat surface. Users are able to use their fingers to draw on a projected canvas and get immediate feedback as the projector renders the drawing out in real time. This was an amazing idea as I could see the technology potentially be used to create any interactable interfaces on any given surface. There could be a lot of exciting use cases.</p>
 
 <h3>Surprise</h3><p>Elon Musk was there!</p>
-
-<span class="image fit"><img src="images/banner.jpg" alt="whiteboard shots for list of users we picked." /></span>
-	<section class="wrapper style1 align-center">
+</br>
+<!-- <span class="image fit"><img src="images/banner.jpg" alt="whiteboard shots for list of users we picked." /></span> -->
+<!-- 	<section class="wrapper style1 align-center">
 		<div class="inner">
 			<p>Grace's photo gallery</p>
 		</div>
@@ -172,8 +172,8 @@ Photo: Alyssa Abkowltz/The Wall Street</p>
 					</div>
 				</article>
 			</div>
-	</section>
-
+	</section> -->
+</br>
 <!--
 
 NIKA
@@ -199,8 +199,8 @@ However, the question is why this trend is apparent here in Austin. The huge cus
 <p>AI was one of the biggest themes at SXSW 2018. To my surprise, a good portion of the talks focus on the ethical issues of AI. Gender and race equality is a frequently discussed topic. One rule of thumb is to train AI with unbiased data. I’m glad to see how the people shaping the future of AI are putting a lot of thought and effort into the ethical side of the technology.</p>
 <p>It also leads me to think: can card-only payments be a form of discrimination for lower income populations? How can we include everyone while moving together into the age of a cashless society? There is also the big question of: is convenience always a good thing? What if payments are so convenient, people no longer take the time to think about budgeting and make people prone to debt?</p>
 
-<span class="image fit"><img src="images/w04_users.jpg" alt="whiteboard shots for list of users we picked." /></span>
-	<section class="wrapper style1 align-center">
+<span class="image fit"><img src="images/w08_chilantro_cashless.jpg" alt="Chilantro, a Cashless foodtruck." /></span>
+<!-- 	<section class="wrapper style1 align-center">
 		<div class="inner">
 			<p>Nika's photo gallery</p>
 		</div>
@@ -242,7 +242,9 @@ However, the question is why this trend is apparent here in Austin. The huge cus
 					</div>
 				</article>
 			</div>
-	</section>
+	</section> -->
+</br>
+
 <!--
 
 SCOTT
@@ -250,6 +252,7 @@ SCOTT
  -->
 
 <h2>Scott</h2>
+
 
 <h3>Best MC takeaway</h3>
 <strong>Ant Financial Cashless Cities (and Chinese design)</strong>
@@ -267,33 +270,48 @@ SCOTT
 
 <strong>Some Examples</strong>
 
-<p>Ant Forest, a minigame within Alipay, basically encourages users to reduce their Carbon Footprint. Socially gamified, walk to work, when you use digipay you get "green points" and Alipay will buy a tree and plant it for you. People are socially engage 280M people used game. 13M trees were planted in Ant Forest and carbon emissions reduced by 2M tons.</p>
-<p>Ant Farm, targets charities to fix gap between rural and urban, poor. DigiChicken, when you do digipay, you get food for the chicken, the chicken lays eggs, once you get enough, heart of Love you receive, AliPay donates something to rural charities.</p>
-<p>Chinese New Year - Leung sees younger people that aren't really keeping up older cultural Chinese traditions. So they made the "5 Fortune Project" - if you write down “Fou” (good luck), you use their AR app to scan it, and then you collect Fou cards. You get a digital red envelope with a small amount of money in it. 250M people got a red envelope this year. As users collect red envelopes, they are asked to buy a Chinese new year gift, and AliPay will cover delivery fees, and will be sent to rural area children.</p>
-<p>Back to Cashless Societies…</p>
+<p><strong>Ant Forest</strong>, a minigame within Alipay, basically encourages users to reduce their Carbon Footprint. Socially gamified, walk to work, when you use digipay you get "green points" and Alipay will buy a tree and plant it for you. People are socially engage 280M people used game. 13M trees were planted in Ant Forest and carbon emissions reduced by 2M tons.</p>
+<p><strong>Ant Farm</strong>, targets charities to fix gap between rural and urban, poor. DigiChicken, when you do digipay, you get food for the chicken, the chicken lays eggs, once you get enough, heart of Love you receive, AliPay donates something to rural charities.</p>
+<p><strong>Chinese New Year</strong> - Leung sees younger people that aren't really keeping up older cultural Chinese traditions. So they made the "5 Fortune Project" - if you write down “Fou” (good luck), you use their AR app to scan it, and then you collect Fou cards. You get a digital red envelope with a small amount of money in it. 250M people got a red envelope this year. As users collect red envelopes, they are asked to buy a Chinese new year gift, and AliPay will cover delivery fees, and will be sent to rural area children.</p>
+
+<p><strong>Back to Cashless Societies…</strong></p>
 <p>Voice recognition and face scanning are playing a role beyond QR codes too. In the subway in Beijing, you can use your Voice and Facial recognition to go through entrance currently. At Amazon-locker-type pickups, you can open a box with face scan.</p>
 <p>However, the QR code still rules. Huawei, Xiaomi, OPPO, and Vivo comprise 66% of the smartphone market in China. Street food vendors or grocery owners or his example of a 76 year old laborer - all have QR codes. Laborer used to carry tons of coins but for 50 cents, they can have a high quality print out and delivered lanyard with a laminated QR code of their account. Many poor and rural laborers benefit from this ease of payment and it opens up new avenues of work to them.</p>
 <p>There was no discussion of the security concerns about these technologies, naturally, but Leung was very proud of what they’ve made, and are working on for the future.  He left with the conclusion that designers now have a broader mandate to affect positive change in business and social responsibility, and was happy to share Chinese innovate across cultures in Europe, the US, and here at SXSW.</p>
+
+<span class="image fit"><img src="images/w08_wearecashless.jpg" alt="A cashless food truck in Austin." /></span>
+
+<p>One last interesting tidbit was a trip to the Whole Foods HQ. They have a number of Amazon lockers, much like many other locations around the US, but they also have refridgerated lockers that allow you to order food online and come pick up perishables in the store at your convenience.</p>
+
+<span class="image fit"><img src="images/w08_lockers.jpg" alt="Amazon lockers at the Whole Foods HQ." /></span>
+
+
 
 <h3>Surprise</h3>
 <p>After the first few days at SXSW, I was generally let down by a number of the design topics I already had some domain knowledge about. So I branched out. Some of the most rewarding talks for me were in places I never expected. I sat in on one about the Future of the Trucking industry, with a number of startups focused on data collection, P2P marketplaces, and safety. Uber and Lyft are going after the taxi industry ($17B), while non-recurring truck freight is a $100B industry. It was fascinating to hear about the changes there.</p>
 <p>Also, VR in Healthcare was a great talk, showing some terrific results getting patients lower doses of meds, or off of narcotics completely with VR scenes as a treatment. I was also happy to see Skylar Tibbets, an MIT digital fabrication researcher speak, as well as Daniel Davis, a friend and head researcher at WeWork. Both of these sessions yielded wonderful glimpses into their research and great discussion questions afterwards.</p>
 
+
+
+
+
 <h3>Favorite Thing</h3>
 <p>Beyond some of the terrific talks SXSW had to offer, I think Austin itself was my favorite part. The city is alive with music, as well as terrific food. I had plenty of tacos or bbq and splurged on food while I was there. The music scene is great and I was happy to see a number of performances, the best of which may go to Low performing with an organ in St. David’s Episcopal church. And finally, the weather! I rented a bike and had perfect weather for commuting to and from the downtown to South Lamar, and around the beautiful lake. I definitely recommend Austin as a great place for any winter weary travellers from the North to spend some time in early spring!</p>
 
-<span class="image fit"><img src="images/w04_users.jpg" alt="whiteboard shots for list of users we picked." /></span>
+<span class="image fit"><img src="images/w08_tacos_banner.jpg" alt="Tacos are the best." /></span>
+
+<!--
 	<section class="wrapper style1 align-center">
 		<div class="inner">
-			<p>Scott's photo gallery</p>
+			<p>Amazon Lockers at Whole Foods Headquarters</p>
 		</div>
 			<div class="gallery style2 medium lightbox onscroll-fade-in">
 				<article>
 					<a href="images/gallery/fulls/01.jpg" class="image">
-						<img src="images/gallery/thumbs/01.jpg" alt="" />
+						<img src="images/w08_amazonlocker.jpg" alt="" />
 					</a>
 					<div class="caption">
-						<h3>Ipsum Dolor</h3>
+						<h3>Amazon Lockers at Whole Foods</h3>
 						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 						<ul class="actions">
 							<li><span class="button small">Details</span></li>
@@ -302,22 +320,10 @@ SCOTT
 				</article>
 				<article>
 					<a href="images/gallery/fulls/02.jpg" class="image">
-						<img src="images/gallery/thumbs/02.jpg" alt="" />
+						<img src="images/w08_amazonlockerrefridgerator.jpg" alt="" />
 					</a>
 					<div class="caption">
-						<h3>Feugiat Lorem</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/03.jpg" class="image">
-						<img src="images/gallery/thumbs/03.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Magna Amet</h3>
+						<h3>Amazon Refridgerated Lockers at Whole Foods</h3>
 						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 						<ul class="actions">
 							<li><span class="button small">Details</span></li>
@@ -325,7 +331,9 @@ SCOTT
 					</div>
 				</article>
 			</div>
-	</section>
+	</section> -->
+<br>
+<span class="image fit"><img src="images/w08_airplane_banner.jpg" alt="We out." /></span>
 
 
 
