--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
 						</div>
 					</section>
 
+				<!-- Eight -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Weeknotes 8 - The Team Goes to Austin, TX for SXSW</h2>
+							<p>Every year, for 10 days in the middle of March, over 400,000 people descend upon Austin, Texas to attend the thousands of varied events, talks, and festivals that combine to form South by Southwest (SXSW). Here's what we got out of it...</p>
+							<ul class="actions vertical">
+								<li><a href="week08.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w08_MCatSXSW_banner.JPG" alt="" />
+						</div>
+					</section>
 
 					<!--<section class="wrapper style1 align-center">
 						<div class="inner">
