fixed broken links

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/w08_MCatSXSW_banner.JPG" alt="" />
+							<img src="images/w08_MCatSXSW_banner.jpg" alt="" />
 						</div>
 					</section>
 
