--- a/week08.html
+++ b/week08.html
@@ -25,7 +25,7 @@
 							</header>
 							<div class="content">
 
-<span class="image fit"><img src="images/w08_MCatSXSW.jpg" alt="The Mastercard display at the Four Seasons at SXSW." /></span>
+<span class="image fit"><img src="images/w08_MCatSXSW_banner.jpg" alt="The Mastercard display at the Four Seasons at SXSW." /></span>
 
 <p>Every year, for 10 days in the middle of March, over 400,000 people descend upon Austin, Texas to attend the thousands of varied events, talks, and festivals that combine to form South by Southwest (SXSW).</p>
 <!--
